Archive/1bc13336116d3b8afdae02bbc1f75e54-d6c803482d553f395422ddf5510f4bb0/output
+ g++ -std=c++11 -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:13:43: error: no matching function for call to ‘all(std::string)’
     std::cout << all(std::string("i3aa34"));
                                           ^
main.cpp:13:43: note: candidate is:
main.cpp:5:13: note: template<class CharT, class Traits, class Predicate, class String> void all(const String&)
 inline void all(const String& str) {
             ^
main.cpp:5:13: note:   template argument deduction/substitution failed:
main.cpp:13:43: note:   couldn't deduce template parameter ‘CharT’
     std::cout << all(std::string("i3aa34"));
                                           ^
